feat: add command utils and test add virtual disk utils and test add totp util test
docs:
add system requirements

Signed-off-by: aghost <ggg17226@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
+          export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get install -y qemu-utils
 
       - name: Build
         run: go build -v ./...
