--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,13 +10,13 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
 
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.18
+          go-version: ^1.19
         id: go
 
       - name: Check out code into the Go module directory
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get install -y qemu-utils
 
       - name: Build
-        run: go build -v ./...
+        run: make
 
       - name: Test
         run: go test -v ./...
