--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
-          export DEBIAN_FRONTEND=noninteractive
-          sudo apt-get install -y qemu-utils
+          export DEBIAN_FRONTEND=noninteractive 
+          sudo apt-get update
+          sudo apt-get install -y qemu-utils build-essential make gcc-arm-linux-gnueabi gcc
 
       - name: Build
         run: make
